--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -5,7 +5,7 @@
   font-family: helvetica;
 }
 
-/* TAG HEADER */
+/* INIZIO TAG HEADER */
 
 .bg-blue{
   background-color: #0C325A;
@@ -71,10 +71,35 @@ ul li{
   left: 12%;
 }
 
-p{
+#under-text{
   font-size: 15px;
   display: inline-block;
   padding: 30px 30px;
   border-radius: 10px;
   margin-top: 40px;
+}
+
+/* FINE TAG HEADER */
+/* INIZIO TAG MAIN */
+
+.grey-box{
+  width: 100%;
+  height: 200px;
+  background-color:lightgrey;
+  text-align: center;
+}
+
+.grey-box-text{
+    padding-top: 50px;
+}
+
+#grey-box-text1{
+  font-size: 35px;
+}
+
+#grey-box-text2{
+  color: grey;
+  font-size: 25px;
+  font-weight:bold;
+  padding-top: 20px;
 }
