--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -16,10 +16,16 @@ vertical-align: middle;
 margin-bottom: 10px;
 }
 
-.nav-sup{
+.container{
   width: 100%;
   height:80px;
+  line-height: 80px;
   text-align: center;
+}
+
+.container1{
+  width: 100%;
+  height:80px;
   line-height: 80px;
 }
 
@@ -37,6 +43,7 @@ margin-bottom: 10px;
   width: 100%;
   height:600px;
   position: relative;
+  text-align: left;
 }
 
 .back-head-img{
@@ -73,8 +80,9 @@ ul li{
 
 #under-text{
   font-size: 15px;
+  font-weight: bold;
   display: inline-block;
-  padding: 30px 30px;
+  padding: 30px 20px;
   border-radius: 10px;
   margin-top: 40px;
 }
