--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: helvetica;
+  font-family: 'Maven pro', sans-serif;
 }
 
 /* INIZIO TAG HEADER */
@@ -13,20 +13,24 @@
   display: table;
 }
 
-.bg-blue{
+header{
   background-color: #0C325A;
+}
+
+nav{
+  margin-left: 10%;
 }
 
 .logo{
 vertical-align: middle;
 margin-bottom: 10px;
+text-align: left;
 }
 
 .container{
   width: 100%;
   height:80px;
   line-height: 80px;
-  text-align: center;
 }
 
 .bordo{
@@ -36,7 +40,7 @@ margin-bottom: 10px;
 }
 
 .bg-green{
-  background-color: #228B22;
+  background-color: #7CBB01;
 }
 
 .banner{
@@ -67,18 +71,23 @@ ul li{
   color: white;
   font-size: 13px;
   font-weight: bold;
+  text-align: center;
 }
 
 .text{
   color: white;
-  font-size: 30px;
-  position: absolute;
+  font-size: 25px;
+  padding-top: 200px;
+  padding-bottom: 200px;
+  width: 50%;
+  margin-left: 10%;
+  /* position: absolute;
   top:30%;
   width:40%;
-  left: 12%;
+  left: 12%; */
 }
 
-#under-text{
+.text p{
   font-size: 15px;
   font-weight: bold;
   display: inline-block;
@@ -112,38 +121,46 @@ ul li{
   padding-top: 20px;
 }
 
-.row{
+.row1{
   position: relative;
+  margin: 0 5%;
+    text-align: center;
+}
+
+.row2{
+  position: relative;
+  margin: 0 5%;
+  text-align: center;
 }
 
 [class^=col-]{
-  width: 32%;
-  height: 700px;
+  width: 30%;
+  height: 250px;
   display: inline-block;
-  text-align: center;
+
 }
 
 .img-row1{
   height: 200px;
   margin-top: 50px;
-  padding-left: 60px;
 }
 
 h3{
-  margin-top: 40px;
   padding-left: 40px;
   padding-right: 40px;
-  font-size: 37px;
+  font-size: 30px;
   color: #228B22;
 }
 
 hr{
   margin-top: 40px;
+  margin-bottom: 10px;
   margin-left: 45%;
   margin-right: 45%;
 }
 
 .grey-text{
   color: grey;
-
+  padding: 0 40px;
+  font-size: 25px;
 }
