--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -81,10 +81,6 @@ ul li{
   padding-bottom: 200px;
   width: 50%;
   margin-left: 10%;
-  /* position: absolute;
-  top:30%;
-  width:40%;
-  left: 12%; */
 }
 
 .text p{
@@ -122,22 +118,19 @@ ul li{
 }
 
 .row1{
-  position: relative;
   margin: 0 5%;
-    text-align: center;
+  text-align: center;
 }
 
 .row2{
-  position: relative;
   margin: 0 5%;
   text-align: center;
 }
 
 [class^=col-]{
   width: 30%;
-  height: 250px;
-  display: inline-block;
-
+  display:inline-block;
+  vertical-align: top;
 }
 
 .img-row1{
@@ -146,21 +139,21 @@ ul li{
 }
 
 h3{
-  padding-left: 40px;
-  padding-right: 40px;
-  font-size: 30px;
-  color: #228B22;
+
+  font-size: 35px;
+  color: #7CBB01;
+  padding: 20px 0;
 }
 
 hr{
   margin-top: 40px;
-  margin-bottom: 10px;
-  margin-left: 45%;
-  margin-right: 45%;
+  margin-bottom: 30px;
+  margin-left: 40%;
+  margin-right: 40%;
 }
 
 .grey-text{
   color: grey;
-  padding: 0 40px;
-  font-size: 25px;
+  font-size: 20px;
+  margin: 0 65px;
 }
