aggiunto nav e problema sul z-index

--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -238,16 +238,16 @@ select{
   color: white;s
 }
 
-footer{
-  position: relative;
-}
-
 .help{
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  background-color: green;
-  width: 5%;
-  height:10%;
-  z-index: 2;
+  float: right;
+  background-color:#7CBB01 ;
+  width: 4%;
+  padding-top:20px;
+  padding-bottom: 10px;
+  z-index: 1;
+  color: white;
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
+  border:none;
+  margin-right: 20%;
 }
