--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -43,20 +43,17 @@ text-align: left;
   background-color: #7CBB01;
 }
 
-.banner{
+.back-head-img{
+  background-image: url(../img/background-header.png);
+  background-size:60%;
+  background-repeat: no-repeat;
+  background-position: 100% 100%;
   width: 100%;
   height:600px;
   position: relative;
   text-align: left;
 }
 
-.back-head-img{
-  height:80%;
-  width:70%;
-  position: absolute;
-  right: 0;
-  bottom: 0;
-}
 
 ul{
   display: inline;
@@ -243,15 +240,16 @@ select{
 }
 
 .help{
-  position: absolute;
+  position: fixed;
   background-color:#7CBB01 ;
-  width: 4%;
+  right: 20%;
+  bottom: 0;
+  width: 3%;
   padding-top:20px;
+  display: inline-block;
   padding-bottom: 10px;
   z-index: 1;
   color: white;
-  border-top-right-radius: 5px;
-  border-top-left-radius: 5px;
+  border-radius: 5px 5px 0 0;
   border:none;
-  /* margin-right: 20%; */
 }
