--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -5,13 +5,9 @@
   font-family: 'Maven pro', sans-serif;
 }
 
-/* INIZIO TAG HEADER */
+/* INIZIO HEADER */
 
-.row:after{
-  content: "";
-  clear: both;
-  display: table;
-}
+/* INIZIO TAG HEADER */
 
 header{
   background-color: #0C325A;
@@ -19,6 +15,32 @@ header{
 
 nav{
   margin-left: 10%;
+}
+
+ul{
+  display: inline;
+  vertical-align: middle;
+  margin: 0 80px;
+}
+
+ul li{
+  display: inline;
+  vertical-align: middle;
+  margin: 0 10px;
+  color: white;
+  font-size: 13px;
+  font-weight: bold;
+  text-align: center;
+}
+
+/* FINE TAG HEADER */
+
+/* INIZIO CLASSI HEADER */
+
+.row:after{
+  content: "";
+  clear: both;
+  display: table;
 }
 
 .logo{
@@ -54,23 +76,6 @@ text-align: left;
   text-align: left;
 }
 
-
-ul{
-  display: inline;
-  vertical-align: middle;
-  margin: 0 80px;
-}
-
-ul li{
-  display: inline;
-  vertical-align: middle;
-  margin: 0 10px;
-  color: white;
-  font-size: 13px;
-  font-weight: bold;
-  text-align: center;
-}
-
 .text{
   color: white;
   font-size: 25px;
@@ -89,8 +94,13 @@ ul li{
   margin-top: 40px;
 }
 
-/* FINE TAG HEADER */
-/* INIZIO TAG MAIN */
+/* FINE CLASSI HEADER */
+
+/* FINE HEADER */
+
+/* INIZIO MAIN */
+
+/* INIZIO CLASSI MAIN */
 
 .grey-box{
   width: 100%;
@@ -101,17 +111,6 @@ ul li{
 
 .grey-box-text{
     padding-top: 50px;
-}
-
-#grey-box-text1{
-  font-size: 35px;
-}
-
-#grey-box-text2{
-  color: grey;
-  font-size: 25px;
-  font-weight:bold;
-  padding-top: 20px;
 }
 
 .row{
@@ -152,17 +151,6 @@ ul li{
   padding: 20px 0;
 }
 
-#hr-btw-text{
-  margin-top: 40px;
-  margin-bottom: 30px;
-  margin-left: 40%;
-  margin-right: 40%;
-}
-
- #rowhr{
-  margin: 5% 5%;
-}
-
 .grey-text{
   color: grey;
   font-size: 20px;
@@ -188,8 +176,51 @@ ul li{
   margin-right: 65%;
 }
 
-/* TAG FOOTER */
+/* FINE CLASSI MAIN */
 
+/* INIZIO UTILITY */
+
+#grey-box-text1{
+  font-size: 35px;
+}
+
+#grey-box-text2{
+  color: grey;
+  font-size: 25px;
+  font-weight:bold;
+  padding-top: 20px;
+}
+
+#hr-btw-text{
+  margin-top: 40px;
+  margin-bottom: 30px;
+  margin-left: 40%;
+  margin-right: 40%;
+}
+
+#rowhr{
+  margin: 5% 5%;
+}
+
+/* INIZIO FOOTER */
+
+/* INIZIO SELEZIONE TAG */
+
+.footer-text span,select{
+  color: grey;
+  border: none;
+  font-size: 18px;
+}
+
+select{
+  padding: 0 30px;
+  background-color: lightgrey;
+  text-decoration:underline;
+}
+
+/* FINE SELEZIONE TAG */
+
+/* INIZIO CLASSI FOOTER */
 .grey-box-footer{
 width: 100%;
 height: 200px;
@@ -213,18 +244,6 @@ display: inline-block;
 
 .footer-text{
   margin-left: 25%;
-}
-
-.footer-text span,select{
-  color: grey;
-  border: none;
-  font-size: 18px;
-}
-
-select{
-  padding: 0 30px;
-  background-color: lightgrey;
-  text-decoration:underline;
 }
 
 .btn{
@@ -253,3 +272,7 @@ select{
   border-radius: 5px 5px 0 0;
   border:none;
 }
+
+/* FINE CLASSI FOOTER */
+
+/* FINE FOOTER */
