--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -191,7 +191,7 @@ text-align: left;
   padding-top: 20px;
 }
 
-#hr-btw-text{
+.hr-btw-text{
   margin-top: 40px;
   margin-bottom: 30px;
   margin-left: 40%;
@@ -251,7 +251,7 @@ display: inline-block;
   border-radius: 10px;
   padding:25px 5px;
   margin-left: 15px;
-  color: white;s
+  color: white;
 }
 
 .tasto-int{
